fix small stuff
